--- a/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
+++ b/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
@@ -57,3 +57,5 @@
 @include foundation-flex-classes;
 @include foundation-visibility-classes;
 // @include foundation-prototype-classes;
+
+@import 'teema';
