muutoksia headeriin ja kuvien lisäys

--- a/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
+++ b/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
@@ -57,3 +57,6 @@
 @include foundation-flex-classes;
 @include foundation-visibility-classes;
 // @include foundation-prototype-classes;
+
+// My own CSS
+@import 'blog-style';
