--- a/htdocs/wp-content/themes/starter-theme/assets/scss/_teema.scss
+++ b/htdocs/wp-content/themes/starter-theme/assets/scss/_teema.scss
@@ -1,12 +1,13 @@
 // Tänne voi laittaa teeman omat tyylit
 
-// Kohdekortit täyskorkeiksi.
-.location-card {
-    height: calc( 100% - #{$card-margin-bottom} );
-}
-
 .main-wrapper {
     max-width: rem-calc(1200); // Tämä muuntaa pikselikoon REM-yksiköiksi.
     width: 100%;
     margin: 0 auto;
+        
 }
+body {
+
+    background-color: #E0E6F8;
+}
+
