etusivu ja arjan uusimmat 17.6.

--- a/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
+++ b/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
@@ -61,10 +61,9 @@
 @import 'teema';
 @import 'footer';
 @import 'cards';
+@import 'front-page';
 // My own CSS
 @import 'blog-style';
-
-@import 'sidebarteema';
 
 @import 'teema';
  
