--- a/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
+++ b/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
@@ -58,16 +58,13 @@
 @include foundation-visibility-classes;
 // @include foundation-prototype-classes;
 
-<<<<<<< HEAD
-@import 'teema';
+
 @import 'footer';
 @import 'cards';
-=======
+
 // My own CSS
 @import 'blog-style';
-<<<<<<< HEAD
 @import 'sidebarteema';
-=======
-@import 'teema';
->>>>>>> master
->>>>>>> master
+
+// Pian scss
+@import 'single-author';
