turhauttava masterin lisääminen

--- a/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
+++ b/htdocs/wp-content/themes/starter-theme/assets/scss/app.scss
@@ -61,6 +61,7 @@
 
 @import 'footer';
 @import 'cards';
+
 @import 'front-page';
 
 @import 'teema';
@@ -74,7 +75,8 @@
 
 
 
+// Pian scss
+@import 'single-author';
 
-
-
-
+// Oppaiden listasivu
+@import 'page-authors';
