etusivun some täpät, uudet 19.6.

--- a/htdocs/wp-content/themes/starter-theme/assets/scss/_header.scss
+++ b/htdocs/wp-content/themes/starter-theme/assets/scss/_header.scss
@@ -1,6 +1,6 @@
 .top-bar {
     overflow: hidden;
-    background-color: rgb(243, 24, 170)
+    background-color: #A9BCF5;
   }
   
   .top-bar-left a {
@@ -16,4 +16,8 @@
   .top-bar-left a:hover {
     background-color: #ddd;
     color: black;
+  }
+
+  ul.menu {
+    background-color: #A9BCF5;
   }
