--- a/htdocs/wp-content/themes/starter-theme/assets/scss/_footer.scss
+++ b/htdocs/wp-content/themes/starter-theme/assets/scss/_footer.scss
@@ -1,12 +1,12 @@
 
 .site-footer {
 
-    background: #2c2c2c;
+    background: #A9BCF5;
     color: #f0f0f0;
     text-align: center;
     font-weight: bold;
     text-transform: uppercase;
-    padding: 4rem 0;
+    padding: 2rem 0;
     margin: 0;
     border-top: rem-calc(2) solid red;
 }
