--- a/htdocs/wp-content/themes/starter-theme/assets/scss/_front-page.scss
+++ b/htdocs/wp-content/themes/starter-theme/assets/scss/_front-page.scss
@@ -6,3 +6,18 @@ h1 {
     width: 100%;
 }
 
+main {
+    background-color:#CED8F6;
+    width: 100%;
+}
+
+
+.artikkelit{
+    text-align: right;
+}
+
+
+.some-button {
+    height: 4rem;
+    width: 4rem;
+}
